--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server --progress --colors --config webpack/webpack.dev.config.js",
     "build": "npm run clean && cross-env NODE_ENV=production webpack --progress --colors --config webpack/webpack.prod.config.js",
     "clean": "rm -rf build/*",
+    "eslint": "eslint --ext .js src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "pre-commit": [
+    "eslint"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jinzis/Personal-homepage.git"
@@ -22,6 +26,7 @@
   "homepage": "https://github.com/jinzis/Personal-homepage#readme",
   "devDependencies": {
     "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
@@ -32,6 +37,12 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.1",
+    "eslint": "^3.12.2",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.8.0",
     "event-source-polyfill": "0.0.7",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.0",
@@ -39,6 +50,7 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.25.0",
     "node-sass": "^4.1.1",
+    "pre-commit": "^1.2.2",
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
@@ -50,6 +62,7 @@
   },
   "dependencies": {
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0"
   }
 }
