--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:pre": "webpack --config webpack/webpack.dll.config.js",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --progress --colors --config webpack/webpack.dev.config.js",
+    "start": "cross-env NODE_ENV=development node webpack/server.dev.js",
     "build": "npm run clean && cross-env NODE_ENV=production webpack --progress --colors --config webpack/webpack.prod.config.js",
     "clean": "rm -rf build/*",
     "eslint": "eslint --ext .js src",
