--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,10 @@
      "jsx-a11y"
   ],
   "rules": {
+    "jsx-a11y/onclick-has-focus": 0,
+    "jsx-a11y/click-events-have-key-events": 0,
+    "jsx-a11y/no-static-element-interactions": 0,
+    "jsx-a11y/onclick-has-role": 0,
     "no-new-func": 1,
     "func-names": 0,
     "no-new": 0,
