--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "dependencies": {
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-responsive": "^1.2.5",
     "react-router": "^3.0.0"
   }
 }
